assets/css/style.css
/* ... */
.player-scores {
    display: inline-block;
    font-family: 'Raleway' , sans-serif;
    border: 1px solid #BADDE9;
    border-radius: 5px;
    font-size: 1.75vmax;
    width: 1.8vmax;
    text-align: center;
    font-weight: bold;
    color: #BADDE9;
    background-color: #1B316D;
}

/* Assign grid area names. Each grid will represent a card. */

#card-a1 {
    grid-area: a1;
}

#wyn-b1 {
    grid-area: b1;
}

#card-c1 {
    grid-area: c1;
}

#card-d1 {
    grid-area: d1;
}

#card-a2 {
    grid-area: a2;
}

#wyn-b2 {
    grid-area: b2;
}

#card-c2 {
    grid-area: c2;
}

#card-d2 {
    grid-area: d2;
}
#card-a3 {
    grid-area: a3;
}

#wyn-b3 {
    grid-area: b3;
}

#card-c3 {
    grid-area: c3;
}

#card-d3 {
    grid-area: d3;
}

#card-a4 {
    grid-area: a4;
}

#wyn-b4 {
    grid-area: b4;
}

#card-c4 {
    grid-area: c4;
}

#card-d4 {
    grid-area: d4;
}
/* Assistance in developing flex from this article: https://www.freecodecamp.org/news/how-to-center-anything-with-css-align-a-div-text-and-more/ */
#game-grid {
flex: 1 auto;
margin: 10px 25px 10px 5px;
display: grid;
grid-template-columns: repeat(4, 20%);
grid-template-rows: repeat(4, 135px);
column-gap: 3.5%;
row-gap: 15px;
grid-template-areas:
    "a1 a2 a3 a4"
    "b1 b2 b3 b4"
    "c1 c2 c3 c4"
    "d1 d2 d3 d4";
max-width: 100%;
justify-content: center;
visibility: hidden;
}

/* Card flip code from this site: https://dev.to/mugas/flip-cards-with-javascript-2ad0 */
.card {
    display: flex;
    background-color: #1B316D;
    transform-style: preserve-3d;
    transition-duration: 2s;
    cursor: pointer;
    border: 0;
}
/* Style for reverse of game cards. */
.card-reverse {
    display: flex;
    height: 100%;
    width: 100%;
    margin: 0 10px;
    align-items: center;
    justify-content: center;
    background-color: #E9D358;
    text-align: center;
    line-height: 100px;
    color: #1B316D;
    border-radius: 5px;
    border: 2px solid #BADDE9;
    font-size: 4rem;
    backface-visibility: hidden;
}

.card-reverse:hover {
    transform: scale(1.02);
    border-width: 3px;
}

.card-reverse > p {
    margin-bottom: 0;
}
/* styling for div that will display the animal image. */
.card-front {
    display: flex;
    position: absolute;
    margin: 0 10px;
    right: 0;
    height: 100%;
    width:100%;
    align-items: center;
    justify-content: center;
    background-color: #BADDE9;
    border-radius: 5px;
    border: 2px solid #E9D358;
    transform: rotateY(180deg);
    backface-visibility: hidden;
}

.card-front > img {
    max-width: 90%;
    max-height: 90%;
}

.card.flip {
    transform: rotateY(180deg);
    transition-duration: 2s;
  }
  /* feedback star styling with animation to zoom out when display is changed from none to block by JS. */
  #feedback {
    text-align: center;
    color: #badde9;
    opacity: 0.95;
    position: absolute;
    top: 25%;
    left: 30%; 
    transform: translateY(-50%) translateX(-50%);
    font-size: 25rem;
    display: none;
    animation-name: feedback-zoom;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
}
@keyframes feedback-zoom {
    from {
        transform: scale(0)
    }
    to {
        transform: scale(1.5);
    }
}
#feedback p{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    text-align: center;
    color: #1B316D;
    font-size: 2.2rem;
}
footer {
    position: fixed;
    bottom: 0;
}
footer a{
width: 100px;
color:#BADDE9;
background-color: #1B316D;
opacity: 0.75;
font-size: 0.5rem;
padding: 5px;
font-family: 'Raleway', sans-serif;
}

/* 
Responsive styling for Media Screens
*/
@media screen and (max-width:1200px) {
    #game-area-instructions {
        top: 450px;
    }
    #how-to-play-button{
        font-size: 1vmax;
    }
}

@media screen and (max-width:950px) {

    .logo-and-title {
        padding: 10px 0;
        width: 30%;
    }
    #instructions {
        width: 50%;
    }
    #game-section{
        flex-wrap: wrap;
        height: auto;
    }

    .game-control-divs h2 {
        margin: 0.5vmax 5px;
        font-size: 2vmax;
    }
    .game-control-divs h3 {
        margin: 0.25vmax 5px;
        font-size: 1.5vmax;
    }

    #start-game-button {
        font-size: 1.5vmax;
        width: 40%;
    }

    #how-to-play-button {
        font-size: 1vmax;
        width: 28%;
    }

    #game-info {
        flex-grow: 0;
        width: 100%;
        height: 16vmax;
        margin: 0 15vmax;
    }
    #game-area-instructions {
        left: 50%;
        top: 55%;
        width: 75%;
    }
    #player-info-area {
        display: flex;
        width: 100%;
        height:90px;
        flex-direction: row;
        bottom: 0;
        width: 100%;
    }
    #game-area{
        margin: 20px;
        flex-grow: 0;
        width: 100%;
        height: 575px;
    }
    #scores-area {
        width:35vmax;
        height: 70px;
        flex-grow:0;
    }
    #game-section {
        height: 550px;
    }
    #game-grid {
        grid-template-rows: repeat(4, 125px);
        column-gap: 4.5%;
    }

    #game-status-div{
        height: 70px;
        width: 200px;
        flex-grow:0;
        font-size: 2vmax;
        margin-left: 3vmax;
        margin-bottom: 2px;
    }
    #game-status-div span {
        font-size: 3.5vmax;
    }
    #game-status-div p{
        margin: 10px;
    }

    #feedback{
        left: 20%;
    }

    #game-outcome {
        left: 25%;
    }

    @keyframes outcome-zoom {
        from {
            transform: scale(0)
        }
        to {
            transform: scale(1.5);
        }
    }
}
/* ... */

